--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ dash==2.18.2
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+eventlet
 Flask==3.0.3
 Flask-SocketIO==5.5.1
 fonttools==4.55.7
